--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ scipy>=0.15.1
 scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
-gspread oauth2client
+google-auth
+google-auth-oauthlib>=0.4.1
+gspread
